Fix: corrected the alternative link to download the statute on mobile phones.

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -5509,6 +5509,11 @@ html {
     line-height: 1.75rem;
   }
 
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .md\:leading-normal {
     line-height: 1.5;
   }
